<resources>
    <string name="app_name">PW4</string>
    <string name="memory_save">MS</string>
    <string name="memory_read">MR</string>
    <string name="memory_clear">MC</string>
    <string name="cBTN">C</string>
    <string name="errorMSG">error</string>

    <string name="zeroBTN">0</string>
    <string name="oneBTN">1</string>
    <string name="twoBTN">2</string>
    <string name="threeBTN">3</string>
    <string name="fourBTN">4</string>
    <string name="fiveBTN">5</string>
    <string name="sixBTN">6</string>
    <string name="sevenBTN">7</string>
    <string name="eightBTN">8</string>
    <string name="nineBTN">9</string>
    <string name="divideBTN">/</string>
    <string name="multiplyBTN">*</string>
    <string name="addBTN">+</string>
    <string name="substractBTN">-</string>
    <string name="equalsBTN">=</string>
    <string name="dotBTN">.</string>

    <item name="relative1" type="id" />
    <item name="edt1" type="id" />
    <item name="oneBTN" type="id" />
    <item name="twoBTN" type="id" />
    <item name="threeBTN" type="id" />
    <item name="fourBTN" type="id" />
    <item name="fiveBTN" type="id" />
    <item name="sixBTN" type="id" />
    <item name="sevenBTN" type="id" />
    <item name="eightBTN" type="id" />
    <item name="nineBTN" type="id" />
    <item name="dotBTN" type="id" />
    <item name="zeroBTN" type="id" />
    <item name="addBTN" type="id" />
    <item name="substractBTN" type="id" />
    <item name="multiplyBTN" type="id" />

    <item name="cBTN" type="id" />
    <item name="divideBTN" type="id" />
    <item name="equalsBTN" type="id" />
    <item name="calculator_grid" type="id" />
</resources>